--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
     
       <center>
-        <h3 class="btn btn-warning heading">EMOTION TO EMOJI APP
+        <h3 class="btn btn-warning heading">APLICACIÓN EMOCIÓN A EMOJI
         <br>
         <span>&#128522;</span>
         <span>&#128512;</span>
@@ -29,38 +29,38 @@
   
         <br><br>
   
-        <p style="font-size: 22px;">Take your selfie to generate emoji
+        <p style="font-size: 22px;">TToma tu foto para generar un emoji
             <br>
-          <b style="color: yellow">Are you Happy?</b>
+          <b style="color: yellow">¿Estás feliz?</b>
           <br>
-          <b style="color: black">Are you Sad?</b>
+          <b style="color: black">¿Estás triste?</b>
           <br>
-          <b style="color: red">Are you Angry?</b>
+          <b style="color: red">¿Estás enojado?</b>
           <br>
         </p>
   
         <div class="col-md-4 col-sm-12 col-xs-12">
-            <label>Webcam View - </label>
+            <label>Vista de la camara web - </label>
             <div id="camera"></div>
             <br><br>
-            <button onclick="take_snapshot();" class="btn btn-warning">Capture Image</button>
+            <button onclick="take_snapshot();" class="btn btn-warning">Capturar imagen</button>
         </div>
   
         <div class="col-md-4 col-sm-12 col-xs-12">
-            <label>Prediction 1 - </label>
+            <label>Predicción 1 - </label>
             <p class="emotion_name" id="result_emotion_name"></p>
             <p class="emoji" id="update_emoji"></p>
   
-            <label>Prediction 2 - </label>
+            <label>Predicción 2 - </label>
             <p class="emotion_name" id="result_emotion_name2"></p>
             <p class="emoji" id="update_emoji2"></p>
           </div>
   
         <div class="col-md-4 col-sm-12 col-xs-12">
-            <label>Snapshot - </label>
+            <label>Instantánea - </label>
             <div id="result"></div>
             <br><br>
-            <button onclick="check();" class="btn btn-success">Predict Emotion</button>
+            <button onclick="check();" class="btn btn-success">Predicir emoción</button>
            </div>
   
       </center>
