--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
         <br><br>
   
-        <p style="font-size: 22px;">TToma tu foto para generar un emoji
+        <p style="font-size: 22px;">Toma tu foto para generar un emoji
             <br>
           <b style="color: yellow">¿Estás feliz?</b>
           <br>
