--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <br>
           <b style="color: black">¿Estás triste?</b>
           <br>
-          <b style="color: red">¿Estás enojado?</b>
+          <b style="color: red">¿Estás enojad@?</b>
           <br>
         </p>
   
