--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <label>Instantánea - </label>
             <div id="result"></div>
             <br><br>
-            <button onclick="check();" class="btn btn-success">Predicir emoción</button>
+            <button onclick="check();" class="btn btn-success">Predecir emoción</button>
            </div>
   
       </center>
