--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
        
             <div class="col-md-4 col-sm-12 col-xs-12">
-            <label>Vista de la camara web - </label>
+            <label>Vista de la cámara web - </label>
             <div id="camera"></div>
             <br><br>
             <button onclick="take_snapshot();" class="btn btn-warning">Capturar imagen</button>
